--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.13.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
