--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.13.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.13.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
-  }
+  },
+  "devDependencies": {}
 }
